<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:panel="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".CustomSignature" >
	<HorizontalScrollView
	    android:id="@+id/hScroll"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/kinggrid_bg_menu_sub"
	    android:scrollbars="none">

	    <RelativeLayout
	        android:id="@+id/layout_btns"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/kinggrid_bg_menu_sub"
	        android:focusable="true"
	        android:focusableInTouchMode="true"
	        android:paddingLeft="5dip"
	        android:paddingRight="5dip"
	        android:paddingBottom="6.0dip"
	        android:paddingTop="5.0dip" >
	        <LinearLayout
	            android:id="@+id/close"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/btn_close"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"		            
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_close" />
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_horizontal"
		            android:textColor="#ffffffff"
		            android:text="@string/close_text"/>
			</LinearLayout>
			<LinearLayout
	            android:id="@+id/save"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/close"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/btn_save"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"		            
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_save" />
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:gravity="center_horizontal"
		            android:textColor="#ffffffff"
		            android:text="@string/save_text"/> 
	        </LinearLayout>
	        <LinearLayout
	            android:id="@+id/pre"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/save"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/page_pre"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_pre" />
		        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:gravity="center_horizontal"
			            android:textColor="#ffffffff"
			            android:singleLine="true"
			            android:text="@string/prepage"/> 
	        </LinearLayout>
	       
	        <LinearLayout
	            android:id="@+id/next"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/pre"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/page_next"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			        android:layout_gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_next" />
		      	<TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:gravity="center_horizontal"
			            android:textColor="#ffffffff"
		            	android:singleLine="true"
			            android:text="@string/nextpage"/> 
	        </LinearLayout>
			<LinearLayout
	            android:id="@+id/zoom"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/next"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/write_move"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_zoom" />  
	            <TextView
	                android:id="@+id/zoomText"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_horizontal"
		            android:textColor="#ffffffff"
		            android:text="@string/zoom_text"/> 
	        </LinearLayout>
	        <LinearLayout
	            android:id="@+id/undo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/zoom"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">	
		        <!-- 撤销 -->		
		        <Button
		            android:id="@+id/btn_undo"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_undo" />  
		        <TextView 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:gravity="center_horizontal"
			            android:textColor="#ffffffff"
			            android:text="@string/undo_text"/> 
	        </LinearLayout>
			<LinearLayout
	            android:id="@+id/redo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/undo"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
	        	<!-- 重做 -->	
		        <Button
		            android:id="@+id/btn_redo"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_redo" />	
	            <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_horizontal"
		            android:textColor="#ffffffff"
		            android:text="@string/redo_text"/> 
	        </LinearLayout>
	        <LinearLayout
	            android:id="@+id/clear"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/redo"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/btn_clear"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_clear" />   
	            <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:gravity="center_horizontal"
		            android:textColor="#ffffffff"
		            android:text="@string/delete_text"/> 
	        </LinearLayout>
	            <LinearLayout
	            android:id="@+id/delete"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/clear"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/btn_sign_delete"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_signer" />
		        <TextView 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:gravity="center_horizontal"
			            android:textColor="#ffffffff"
			            android:text="@string/resign_text"/> 
	        </LinearLayout> 	
	        <LinearLayout
	            android:id="@+id/pen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/delete"
	            android:layout_marginRight="10dip"
	            android:orientation="vertical">
		        <Button
		            android:id="@+id/btn_pen"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingRight="10dip"
			        android:paddingLeft="10dip"
		            android:background="@drawable/o_bg_pen" /> 
		            <TextView 
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:gravity="center_horizontal"
			            android:textColor="#ffffffff"
			            android:text="@string/pensetting_text"/> 
	        </LinearLayout>

	    </RelativeLayout>
    </HorizontalScrollView>
	<FrameLayout
	    android:id="@+id/write_backround"
	    android:layout_width="fill_parent"
       	android:layout_height="fill_parent">
        
        <com.kinggrid.iappoffice.handwrite.ScaleImageView		       
            android:id="@+id/pageImg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:focusable="false"/>

        <com.kinggrid.iappoffice.handwrite.KingGridView1
            android:id="@+id/writing_canvas"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:focusable="false"
            android:focusableInTouchMode="false" >
        </com.kinggrid.iappoffice.handwrite.KingGridView1>
              
        <com.kinggrid.iappoffice.handwrite.SlidingDrawerPanel
            android:layout_width="wrap_content" 
		    android:layout_height="fill_parent" 
		    android:id="@+id/leftPanel1" 
		    android:layout_gravity="left"
		    panel:position="left"
		    panel:openedHandle="@drawable/left_switcher_expanded_background"
		    panel:closedHandle="@drawable/left_switcher_collapsed_background">
			<Button
				android:id="@id/panelHandle" 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" 
			    android:layout_gravity="center"/>
		 
			<LinearLayout
				android:id="@id/panelContent" 
			    android:orientation="vertical"
	    		android:layout_width="wrap_content"
	    		android:layout_height="fill_parent"
		        android:background="#5587ceeb">
				<CheckBox
	                android:id="@+id/showAll" 			 
		            android:layout_width="wrap_content"  			 
		            android:layout_height="wrap_content"
		            android:text="@string/showall"
		            android:textColor="@android:color/black"
		            android:checked="true">			               
	            </CheckBox>
	            <LinearLayout
	                android:id="@+id/checkedlist"
	                android:orientation="vertical"
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"/>
			</LinearLayout>				
		</com.kinggrid.iappoffice.handwrite.SlidingDrawerPanel>
        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLargeInverse"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/progressbar_style"/>
    </FrameLayout>

</LinearLayout>